welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: value Green is not a member of object java.awt.Color
case Color.Green => baisseBrosse; leveBrosse;
           ^SlugTracking:8: error: not found: value esSurBiscuit
return esSurBiscuit();
       ^